fixed extreme gaps between div boxes, added variables to app.js file

--- a/style.css
+++ b/style.css
@@ -18,3 +18,13 @@
 .starting-block {
   background-color: blue;
 }
+
+.log-left,
+.log-right {
+  background-color: brown;
+}
+
+.car-left,
+.car-right {
+  background-color: lightgray;
+}
